# apicius-rs

./: Cargo.toml  DEVELOPING.md  README.md  build.rs
.github/workflows/: rust.yml
src/: checks.rs  grammar.lalrpop  lib.rs  main.rs  regenerate.rs  types.rs
src/render/: constants.rs  graph.rs  mod.rs  table.rs
tests/: eggplant_rougail.analysis  eggplant_rougail.apicius  eggplant_rougail.backward_tree  eggplant_rougail.exp  eggplant_rougail.raw_table  loop.analysis  loop.apicius  loop.exp  loop.problems  no_done.analysis  no_done.apicius  no_done.exp  no_done.problems  scrambled_eggs.analysis  scrambled_eggs.apicius  scrambled_eggs.backward_tree  scrambled_eggs.exp  scrambled_eggs.raw_table  soondubu_jjigae.analysis  soondubu_jjigae.apicius  soondubu_jjigae.backward_tree  soondubu_jjigae.exp  soondubu_jjigae.raw_table  trailing_stuff.analysis  trailing_stuff.apicius  trailing_stuff.exp  trailing_stuff.problems
tools/: regenerate.rs
