[package]
name = "apicius"
version = "0.1.0"
authors = ["Getty Ritter <gettylefou@gmail.com>"]
edition = "2018"
default-run = "apicius"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "apicius"

[[bin]]
name = "apicius"
path = "bin/main.rs"

[[bin]]
name = "apicius-regenerate"
test = true
path = "tools/regenerate.rs"

[dependencies]
regex = "1"
lalrpop-util = "*"
string-interner = "*"
thiserror = "*"
cairo-rs = { version = "*", features = ["png"] }
pango = "*"
pangocairo = "*"

[dev-dependencies]
pretty_assertions = "*"


[build-dependencies.lalrpop]
version = "*"
features = ["lexer"]