[package]
name = "apicius"
version = "0.1.0"
authors = ["Getty Ritter <apicius@infinitenegativeutility.com>"]
edition = "2018"
default-run = "apicius"

[lib]
name = "apicius"

[[bin]]
name = "apicius"
path = "bin/main.rs"

[[bin]]
name = "apicius-regenerate"
test = true
path = "tools/regenerate.rs"

[dependencies]
regex = "1"
lalrpop-util = "*"
string-interner = "*"
thiserror = "*"
cairo-rs = { version = "*", features = ["png"] }
pango = "*"
pangocairo = "*"
clap = { version = "*", features = ["derive", "cargo"] }

[dev-dependencies]
pretty_assertions = "*"

[build-dependencies.lalrpop]
version = "*"
features = ["lexer"]
